--- a/css/styles.css
+++ b/css/styles.css
@@ -28,3 +28,18 @@
   padding: 5px;
 }
 
+img {
+  width: 120%;
+}
+
+.img2 {
+  width: 40%
+}
+
+.img3 {
+  width: 50%;
+}
+
+.img4 {
+  width: 40%;
+}
